--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -27,21 +27,17 @@ jobs:
   build:
 
     runs-on: windows-2019
-    
-    env:
-      OPTS: "-Dcluster.config=full"
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: actions/setup-java@v1
       with:
         java-version: 1.8
     - name: Clean
-      run: ant $OPTS clean
+      run: ant clean
     - name: Build
-      run: ant $OPTS build
-    - name: Test
+      run: ant build
+    - name: Tests
       run: |
-        - ant $OPTS -f platform/core.network test
-        - ant $OPTS -f platform/core.network test
+        - ant -f platform/core.network test
+        - ant -f platform/masterfs.windows test
