--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@
 # specific language governing permissions and limitations
 # under the License.
 
-name: Netbeans Windows build
+name: Netbeans Build
 
 on:
   push:
@@ -24,10 +24,9 @@ on:
       - master
 
 jobs:
-  build:
-
+  windows:
+    name: Windows tests
     runs-on: windows-2019
-
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
@@ -38,6 +37,4 @@ jobs:
     - name: Build
       run: ant build
     - name: Tests
-      run: |
-        - ant -f platform/core.network test
-        - ant -f platform/masterfs.windows test
+      run: ant -f platform/core.network test
