--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,17 +24,34 @@ on:
       - master
 
 jobs:
+  macos:
+    name: MacOS tests
+    runs-on: macos-10.15
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Clean
+        run: ant clean
+      - name: Build
+        run: ant build
+      - name: Tests
+        run: |
+          ant -f platform/masterfs.macosx test
+          ant -f platform/core.network test
+
   windows:
     name: Windows tests
     runs-on: windows-2019
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Clean
-      run: ant clean
-    - name: Build
-      run: ant build
-    - name: Tests
-      run: ant -f platform/core.network test
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Clean
+        run: ant clean
+      - name: Build
+        run: ant build
+      - name: Tests
+        run: ant -f platform/masterfs.macosx test
