--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,22 @@ on:
       - master
 
 jobs:
+  linux:
+    name: Linux tests
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-verion: 1.8
+      - name: Clean
+        run: ant clean
+      - name: Build
+        run: ant build
+      - name: SonarCloud Scan
+        if: github.repository == 'hectorespert/netbeans'
+        uses: SonarSource/sonarcloud-github-action@v1.1
+        
   macos:
     name: MacOS tests
     runs-on: macos-10.15
