--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,9 @@ jobs:
       - name: SonarCloud Scan
         if: github.repository == 'hectorespert/netbeans'
         uses: SonarSource/sonarcloud-github-action@v1.1
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         
   macos:
     name: MacOS tests
@@ -48,6 +51,7 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - run: brew install ant
       - name: Clean
         run: ant clean
       - name: Build
