--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,8 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-verion: 1.8
+          java-package: jdk
+          architecture: x64
       - name: Clean
         run: ant clean
       - name: Build
