--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-verion: 1.8
+          java-version: 1.8
       - name: Clean
         run: ant clean
       - name: Build
